--- a/index.html
+++ b/index.html
@@ -5,174 +5,239 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <title>Juan Marin - Web Portfolio</title>
+    <link rel="icon" href="./src/img/iconImage.png" type="image/JPG" />
   </head>
 
   <body>
-    <section class="hero">
+    <header>
+      <a href="#" class="logo-holder">
+        <div class="logo">JM</div>
+        <div class="logo-text">Portfolio Website</div>
+      </a>
       <nav>
-        <img class="logo" src="src/img/logo.png" alt="A logo" />
-        <ul id="nav-list">
-          <li><a href="#about-me">About me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact-me">Contact</a></li>
+        <ul id="menu">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#skills">My Development Stack</a>
+          </li>
+          <li>
+            <a href="#projects">Projects</a>
+          </li>
+          <li>
+            <a href="mailto:jdmh25@gmail.com" class="button">Contact Me</a>
+          </li>
         </ul>
-        <button class="hamburger" id="hamburger">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
-            <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+        <a href="#" class="mobile-toggle" onclick="toggleMobileMenu()">
+          <svg
+            class="w-6 h-6 text-gray-800 dark:text-white"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
             <path
-              d="M96 96h384v288h64V72C544 50 525.1 32 504 32H72C49.1 32 32 50 32 72V384h64V96zM560 416H416v-48c0-8.838-7.164-16-16-16h-160C231.2 352 224 359.2 224 368V416H16C7.164 416 0 423.2 0 432v32C0 472.8 7.164 480 16 480h544c8.836 0 16-7.164 16-16v-32C576 423.2 568.8 416 560 416z"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-width="2"
+              d="M5 7h14M5 12h14M5 17h10"
             />
           </svg>
-        </button>
+        </a>
       </nav>
-      <div class="hero-area">
-        <div class="hero-text">
-          <h1>Juan Diego Marin Herrera</h1>
-          <p>Full Stack Developer</p>
-          <div class="button"><a href="#about-me">About me</a></div>
-        </div>
-        <div class="socials">
+    </header>
+    <main>
+      <section class="hero container">
+        <div class="hero-green">
           <div>
+            <h1>
+              <small>Hi I'm</small>
+              Juan Marin
+            </h1>
+            <p>
+              Motivated software engineer with 1 year of experience in
+              full-cycle development using Java, Python, and C#. Skilled in web
+              technologies, API design, databases, and Agile collaboration.
+              Strong communicator with a passion for solving complex problems
+              and continuous learning.
+              <span>
+                I'm interested in AI topics which is why I also add things like
+                ChatGPT into my projects these days.</span
+              >
+            </p>
+            <div class="call-to-action">
+              <a href="#projects" class="button black"> View Projects </a>
+              <a href="mailto:jdmh25@gmail.com" class="button white">
+                Contact Me
+              </a>
+            </div>
+            <div class="social-links">
+              <a
+                href="https://github.com/JuanM-25"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img src="./src/img/githubImg.png" alt="Github" width="48" />
+              </a>
+              <a
+                href="https://www.linkedin.com/in/juan-marin25/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./src/img/linkedinImg.png"
+                  alt="LinkedIn"
+                  width="48"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="hero-blue">
+          <img src="./src/img/FotoPerfil.jpeg" alt="Juan Marin" width="100%" />
+        </div>
+      </section>
+      <section class="logos container">
+        <div class="marquee">
+          <div class="track">
+            <img src="./src/img/html.png" alt="HTML" width="128" />
+            <img src="./src/img/css.png" alt="CSS" width="128" />
+            <img src="./src/img/javascript.png" alt="JavaScript" width="128" />
+            <img src="./src/img/react.png" alt="React" width="128" />
+            <img src="./src/img/java.png" alt="Java" width="128" />
+            <img src="./src/img/python.png" alt="Python" width="128" />
+            <img src="./src/img/php.png" alt="Php" width="128" />
+            <img src="./src/img/mysql.png" alt="MySQL" width="128" />
+            <img src="./src/img/firebase.png" alt="Firebase" width="128" />
+            <img src="./src/img/vscode.png" alt="Vscode" width="128" />
+            <img src="./src/img/html.png" alt="HTML" width="128" />
+            <img src="./src/img/css.png" alt="CSS" width="128" />
+            <img src="./src/img/javascript.png" alt="JavaScript" width="128" />
+            <img src="./src/img/react.png" alt="React" width="128" />
+            <img src="./src/img/java.png" alt="Java" width="128" />
+            <img src="./src/img/python.png" alt="Python" width="128" />
+            <img src="./src/img/php.png" alt="Php" width="128" />
+            <img src="./src/img/mysql.png" alt="MySQL" width="128" />
+            <img src="./src/img/firebase.png" alt="Firebase" width="128" />
+            <img src="./src/img/vscode.png" alt="Vscode" width="128" />
+          </div>
+        </div>
+      </section>
+      <section id="skills" class="skills container">
+        <h2>
+          <small>About Me</small>
+          skills
+        </h2>
+        <div class="holder-green">
+          <div class="left-column">
+            <h3>Frontend</h3>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>React</li>
+            </ul>
+            <h3>Backend</h3>
+            <ul>
+              <li>Node JS</li>
+              <li>Express</li>
+              <li>Python</li>
+              <li>PHP</li>
+            </ul>
+          </div>
+          <div class="right-column">
+            <h3>A bit about me</h3>
+            <p>
+              I am a passionate software developer with a strong foundation in
+              computer science and a keen interest in web development. I enjoy
+              creating efficient and user-friendly applications that solve
+              real-world problems. My goal is to continuously learn and grow in
+              the field of software development, while contributing to
+              innovative projects.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section id="projects" class="bento">
+        <h2>
+          <small>Previous</small>
+          Completed Projects
+        </h2>
+        <div class="bento-grid">
+          <a href="#" class="bento-item">
+            <img
+              src="./src/img/Coming soon- mike-van-den-bos.jpg"
+              alt="Juan Marin"
+              alt="Project 1"
+              width="100%"
+            />
+          </a>
+          <a href="#" class="bento-item">
+            <img
+              src="./src/img/Coming soon- mike-van-den-bos.jpg"
+              alt="Juan Marin"
+              alt="Project 2"
+              width="100%"
+            />
+          </a>
+          <a href="#" class="bento-item">
+            <img
+              src="./src/img/Coming soon- mike-van-den-bos.jpg"
+              alt="Juan Marin"
+              alt="Project 3"
+              width="100%"
+            />
+          </a>
+          <a href="#" class="bento-item">
+            <img
+              src="./src/img/Coming soon- mike-van-den-bos.jpg"
+              alt="Juan Marin"
+              alt="Project 4"
+              width="100%"
+            />
+          </a>
+          <a href="#" class="bento-item">
+            <img
+              src="./src/img/Coming soon- mike-van-den-bos.jpg"
+              alt="Juan Marin"
+              alt="Project 5"
+              width="100%"
+            />
+          </a>
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="footer-container">
+          <div class="footer-social">
             <a
               href="https://github.com/JuanM-25"
               target="_blank"
               rel="noopener noreferrer"
-              class="social"
             >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="#ffffff"
-                width="50"
-                height="50"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
-                />
-              </svg>
+              <img src="./src/img/githubImg.png" alt="Github" width="48" />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/juan-marin25/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img src="./src/img/linkedinImg.png" alt="LinkedIn" width="48" />
             </a>
           </div>
-          <div>
-            <a
-              href="https://cr.linkedin.com/in/juan-diego-marin-herrera-b378a8179"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="social"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="#ffffff"
-                width="50"
-                height="50"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"
-                />
-              </svg>
-            </a>
-          </div>
+          <p>&copy; 2025 Juan Marin. All rights reserved.<br /></p>
         </div>
-      </div>
-    </section>
-    <section class="sub-section" id="about-me">
-      <div class="information">
-        <h2>About Me</h2>
-        <p>
-          Hello, my name is Juan Diego Marin Herrera. I am a Software Developer.
-        </p>
-      </div>
-      <div class="headshot-container">
-        <img
-          class="headshot"
-          src="src/img/FotoPerfil.jpeg"
-          alt="A profile picture"
-        />
-      </div>
-    </section>
-    <section class="sub-section-alternative" id="projects">
-      <h2>Projects</h2>
-      <div class="project-container">
-        <div class="project-card">
-          <img
-            class="project-image"
-            src="src/img/Weather.JPG"
-            alt="Weather app image"
-          />
-          <h3>Weather App</h3>
-          <p class="subtext">
-            An application where the user can examine the current weather and
-            forecast of any city in the world. This is a project created with
-            React, OpenWeather API and GeoDB Cities API.
-          </p>
-          <hr />
-          <p class="subtext">
-            <a
-              class="project-link"
-              href="https://weather-app-2218b.web.app/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >View here</a
-            >
-          </p>
-        </div>
-        <div class="project-card">
-          <img
-            class="project-image"
-            src="src/img/Food.JPG"
-            alt="Food order app image"
-          />
-          <h3>Food Order App</h3>
-          <p class="subtext">
-            An application where the user can choose any meal from the menu, by
-            entering the data in a form in order to proceed to the checkout. The
-            entered data is stored in Firebase. This is a project created with
-            React, CSS, and JavaScript.
-          </p>
-          <hr />
-          <p class="subtext">
-            <a
-              class="project-link"
-              href="https://food-order-app-1a24c.web.app/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >View here</a
-            >
-          </p>
-        </div>
-        <div class="project-card">
-          <img
-            class="project-image"
-            src="src/img/Todo.JPG"
-            alt="Todo app image"
-          />
-          <h3>Todo App</h3>
-          <p class="subtext">
-            A React and TypeScript application specially built to keep track of
-            tasks or errands that need to be done.
-          </p>
-          <hr />
-          <p class="subtext">
-            <a
-              class="project-link"
-              href="https://todo-app-22d17.web.app/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >View here</a
-            >
-          </p>
-        </div>
-      </div>
-    </section>
-    <footer id="contact-me">
-      <h2>Contact me</h2>
-      <p>jdmh25@gmail.com</p>
-    </footer>
+      </footer>
+    </main>
     <script src="src/app.js"></script>
   </body>
 </html>
