Actualizaciones en perfil
Nueva foto de perfil y linkedin

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <img src="./src/img/githubImg.png" alt="Github" width="48" />
               </a>
               <a
-                href="https://www.linkedin.com/in/juan-marin25/"
+                href="https://www.linkedin.com/in/juandiegomarinh/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
@@ -227,7 +227,7 @@
               <img src="./src/img/githubImg.png" alt="Github" width="48" />
             </a>
             <a
-              href="https://www.linkedin.com/in/juan-marin25/"
+              href="https://www.linkedin.com/in/juandiegomarinh/"
               target="_blank"
               rel="noopener noreferrer"
             >
