--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <section id="skills" class="skills container">
         <h2>
           <small>About Me</small>
-          skills
+          Skills
         </h2>
         <div class="holder-green">
           <div class="left-column">
@@ -156,7 +156,7 @@
             </ul>
           </div>
           <div class="right-column">
-            <h3>A bit about me</h3>
+            <h3>Just a Dash of Me</h3>
             <p>
               I am a passionate software developer with a strong foundation in
               computer science and a keen interest in web development. I enjoy
